--- a/public/unbk/css/atlantis.css
+++ b/public/unbk/css/atlantis.css
@@ -8930,7 +8930,7 @@ body {
 .bg-primary-gradient {
   background: #1572E8 !important;
   background: -webkit-linear-gradient(legacy-direction(-45deg), #06418E, #1572E8) !important;
-  background: linear-gradient(-45deg, #06418E, #1572E8) !important; }
+  background: linear-gradient(-45deg, #03909e, #15a4e8) !important; }
 
 .bg-secondary-gradient {
   background: #6861CE !important;
